# gme-grid-analytics

./: .env.example  .gitignore  API_FIXES_DOCUMENTATION.md  Dockerfile  LICENSE  QUICK_START.md  README.md  UPDATE_SUMMARY.md  aggregate_pypsa_eur.py  analyze_balancing.py  analyze_congestion.py  animate_flows.py  docker-compose.yml  example.py  example_usage.py  main.py  manual_extracted.txt  plan.txt  plot_flows.py  plot_gme.py  plot_mgp.py  plot_mgp_pypsa_eur.py  prompt.md  pyproject.toml  requirements.txt  run.sh  start.sh  test_api_fixes.py  test_gme_api.py  test_markets.py
.devcontainer/: devcontainer.json
aggregation/data_italy/: hydro_annual_all.csv  substations.csv
archive/: aggregate_italy.py  plot_mgp.py
data/: MB_ME_MBResults_2025-12-20.csv  MB_ME_MBResults_2025-12-30.csv  MGP_ME_Transits_2025-12-20.csv  MGP_ME_Transits_2025-12-28.csv  MGP_ME_Transits_2025-12-30.csv  MGP_ME_TransmissionLimits_2025-12-20.csv  MGP_ME_TransmissionLimits_2025-12-28.csv  MGP_ME_TransmissionLimits_2025-12-30.csv  MGP_ME_ZonalPrices_2025-12-20.csv  MGP_ME_ZonalPrices_2025-12-28.csv  MGP_ME_ZonalPrices_2025-12-30.csv  MSD_ME_MSDExAnteResults_2025-12-20.csv
data/aggregation/: aggregate_italy.py  aggregate_pypsa_eur.py
data_italy/aggregated_30/: buses.csv  generators.csv
data_italy/zonal/: buses.csv  generators.csv  lines.csv  load_profiles.csv  (+1 more)
data_pypsa_eur_zonal/: lines.csv
plotting/: plotter.py
pypsa_eur_data/: converters.csv
src/: analyze_balancing.py  analyze_congestion.py  animate_flows.py  app.py  main.py  plot_flows.py  plot_gme.py
tests/: test_api_pytest.py
(+52 files in other folders)
